--- a/bookreviewspage.html
+++ b/bookreviewspage.html
@@ -67,14 +67,14 @@ body {
 </head>
 
 <body>
-    <div class="sidenav">
-        <a href="index.html">Home</a>
-        <a href="blogpage.html">Blog Posts</a>
-        <a href="#">Book Reviews</a>
-        <a href="randompage.html">Random</a>
-      </div>
-      
       <div class="main">
+        <div class="sidenav">
+          <a href="index.html">Home</a>
+          <a href="blogpage.html">Blog Posts</a>
+          <a href="#">Book Reviews</a>
+          <a href="randompage.html">Random</a>
+        </div>
+
         <h1 style="color: #cc10b0;">Book Reviews</h1>
         <p>Welcome to my book reviews page! Now, this won't have all the books I've read because lord knows I read too damn many. I am 
           mainly planning on reviewing my favorites and least favorites. Books that stood out to me. And so, you're going to see a lot of 5 
@@ -82,6 +82,22 @@ body {
           please enjoy! 
         </p>
         <hr>
+  
+        <div class="dropdown">
+          <span><img src="Bookharrypotter.jpg" height="200px" alt="Harry Potter Cover"></span>
+          <div class="dropdown-content">
+            <h3>Harry Potter Series: <img src="5stars.jpg" width="100px"></h3>
+            <h4>J.K. Rowling</h4>
+            <p>Why not just throw the Harry Potter series on here. Even though J.K. Rowling is a homophobic, transphobic piece of shit, read the Harry Potter books. 
+              You are never to old to read them. They will always be entertaining.
+              <br><br>
+              Not much else I want to say. The movies are great. The books are great. Drarry is real. I won't reread the books because Drarry is 
+              not canon and it makes me sad. Drarry is the best ship (for Draco and Harry) and I will hear no arguments. Stop pushing your hetero 
+              agenda onto me!
+  
+            </p>
+          </div>
+        </div>
 
         <div class="dropdown">
           <span><img src="Bookaftg.jpg" height="200px" alt="AFTG Cover"></span>
