--- a/bookreviewspage.html
+++ b/bookreviewspage.html
@@ -82,6 +82,32 @@ body {
           please enjoy! 
         </p>
         <hr>
+
+        <div class="dropdown">
+          <span><img src="Bookwolfsong.jpg" height="200px" alt="Wolfsong Cover"></span>
+          <div class="dropdown-content">
+            <h3>Wolfsong Series: <img src="5stars.jpg" width="100px"></h3>
+            <h4>T.J. Klune</h4>
+            <p>God, how I love T.J. Klune. All of his books are amazing and I've read so many of them. The Wolfsong series is one of my favorite 
+              book series ever. Ever book was phenomenal, but the first book will always hold a special place in my heart. Joe and Ox will always 
+              have a special place in my heart. The first book is the one I re-read the most.
+              <br><br>*SPOILERS AHEAD*
+              So what do I like? Besides everything? Like I've said before, I'm a sucker for main character sympathy and one of the best things 
+              I find about this series is that Ox saves the day in the end. He's been through so much and I love how he just gains power and 
+              confidence in every book until he's the alpha of everything at the end and defeats the worst enemy of all. There is literally nothing 
+              wrong with Ox. I will be an Ox sympathizer until I die. He would do anything for those he loves and the people around him would do 
+              anything for him. And I love Joe, of course. He loves Ox more than life itself and Ox deserves nothing less. Oh how I love love.
+              <br><br>
+              Besides Ox and Joe, I think Robbie and Kelly are my next favorite. They are so cutie and Robbie's story was so interesting to read. 
+              Every character goes through hardships, but in the end, it just brings them all closer together. I loved how all the books flow together. 
+              Each plot was different and unique and I have absolutely zero complaints. I laughed and cried both so much throughout these books. I remember 
+              being hesitant before I read the book for the first time, looking at it on my TBR list with not much interest. Maybe the synopsis didn't appeal 
+              to me that much at first, but oh my god was this series amazing. I want a short Ox and Joe epilogue with no more conflict, no more fighting. 
+              Just kisses and happily ever afters. T.J. Klune, if you see this, I love you and all of your books.
+  
+            </p>
+          </div>
+        </div>
   
         <div class="dropdown">
           <span><img src="Bookharrypotter.jpg" height="200px" alt="Harry Potter Cover"></span>
