--- a/bookreviewspage.html
+++ b/bookreviewspage.html
@@ -91,7 +91,7 @@ body {
             <p>God, how I love T.J. Klune. All of his books are amazing and I've read so many of them. The Wolfsong series is one of my favorite 
               book series ever. Ever book was phenomenal, but the first book will always hold a special place in my heart. Joe and Ox will always 
               have a special place in my heart. The first book is the one I re-read the most.
-              <br><br>*SPOILERS AHEAD*
+              <br><br>*SPOILERS AHEAD*<br>
               So what do I like? Besides everything? Like I've said before, I'm a sucker for main character sympathy and one of the best things 
               I find about this series is that Ox saves the day in the end. He's been through so much and I love how he just gains power and 
               confidence in every book until he's the alpha of everything at the end and defeats the worst enemy of all. There is literally nothing 
