--- a/bookreviewspage.html
+++ b/bookreviewspage.html
@@ -75,11 +75,14 @@ body {
           <a href="randompage.html">Random</a>
         </div>
 
-        <h1 style="color: #cc10b0;">Book Reviews</h1>
+        <h1 style="color: #cc10b0;">Book Reviews 
+          <a href="https://www.goodreads.com/review/list/180324806?ref=nav_mybooks" target="_blank"><img src="Goodreads.png" alt="Goodreads Logo" width="40px"></a>
+        </h1>
+        
         <p>Welcome to my book reviews page! Now, this won't have all the books I've read because lord knows I read too damn many. I am 
           mainly planning on reviewing my favorites and least favorites. Books that stood out to me. And so, you're going to see a lot of 5 
           star and 1 star reviews. The 3 star books are just okay and I don't feel thinking about them for longer than I have to. Anyways, 
-          please enjoy! 
+          please enjoy! Feel free to click the Goodreads icon in the title to see all the books I've read on my goodreads account.
         </p>
         <hr>
 
