--- a/bookreviewspage.html
+++ b/bookreviewspage.html
@@ -82,7 +82,8 @@ body {
         <p>Welcome to my book reviews page! Now, this won't have all the books I've read because lord knows I read too damn many. I am 
           mainly planning on reviewing my favorites and least favorites. Books that stood out to me. And so, you're going to see a lot of 5 
           star and 1 star reviews. The 3 star books are just okay and I don't feel thinking about them for longer than I have to. Anyways, 
-          please enjoy! Feel free to click the Goodreads icon in the title to see all the books I've read on my goodreads account.
+          please enjoy! Feel free to click the Goodreads icon in the title to see all the books I've read on my goodreads account. (Note: 
+          I am easily entertained so don't come for me for the amount of 5 star ratings you might see.)
         </p>
         <hr>
 
