--- a/bookreviewspage.html
+++ b/bookreviewspage.html
@@ -86,6 +86,58 @@ body {
           I am easily entertained so don't come for me for the amount of 5 star ratings you might see.)
         </p>
         <hr>
+        <div class="dropdown">
+          <span><img src="Bookcaptiveprince.jpg" height="200px" alt="Captive Prince Cover"></span>
+          <div class="dropdown-content">
+            <h3>Captive Prince Series: <img src="5stars.jpg" width="100px"></h3>
+            <h4>C.S. Pacat</h4>
+            <p>This book reviews page would simply never be complete without this series. The Captive Prince series is another one I read 
+              fanfiction for, which should tell you a lot. I loved this series. There was so so much angst, but the happy ending was worth it. 
+              I would die for Damen and Laurent. I hope they live happily ever after and never die and never face any more hardships ever.
+              <br><br>*SPOILERS AHEAD*<br>
+              These books are another definite re-read for me. I reread Kings Rising whenever I want to feel a romance that just defies all odds 
+              and perserveres through the most toughest of times. I don't like to re-read the first two books because they make me angry and sad. 
+              I feel so much for Laurent. I feel so much for Damen. They both deserved better. I mean, could you imagine already living in an 
+              extremely hostile and mentally abusive situation, when the uncle who's been the cause presents you with the man that killed your 
+              brother in cuffs. The amount of strength Laurent had to not kill Damen? Maybe people disagree and think he was still to cruel, but 
+              I'll tell you one thing, if I came face to face with an enemy soldier that personally ran my brother through with a sword, there 
+              is no telling to what I would do. So the whipping was what it was, in my opinion. I don't like to re-read it because, again, sad, 
+              but I can understand it.
+              <br><br>
+              Everything else that happens in the first couple books is a mix of depressing and disturbing. I just have such a soft spot for 
+              Laurent. He was poisoned by his own uncle and still saves the man who left him there to die, essentially. The same man who killed 
+              his brother, I might add. Now, just because I have a soft spot for Laurent doesn't mean I don't love Damen and think he deserved 
+              better. I just wish they both got out of there sooner. And I just love how Laurent is so cold and impassive on the outside, but he 
+              has such a kind heart. Even in the end, when he was chained and knew it was his end, he still fought to get Damen justice. And he 
+              didn't think anyone would do the same for him. I just. Ugh! I think the main thing I like about Laurent is how smart he is. Utterly 
+              alone but still plotting and planning to dethrone his tyrant uncle. And, ugh, (so many things to love) I love how Laurent is just 
+              effortlessly good at things. The whole Okton scene might be my favorite in the whole series. So awesome and hot.
+              <br><br>
+              I just gravitate towards broken characters, and these books were full of them. The Regent 
+              might very well be the worst villain in any of the books I've read. Horrible and murderous and perverted with no redeeming 
+              qualities whatsoever. Laurent was assaulted by his uncle, the Regent, at the lowest point in his life. The very uncle 
+              still making his life hell years later. And you can just see how it breaks him. And how Damen 
+              reacted when he found out? I just love them. I love that they can be happy together after the "war". I am so glad we got a short 
+              epilogue novella. I re-read that the most.
+            </p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <span><img src="Bookbreakinglegacies.jpg" height="200px" alt="Breaking Legacies Cover"></span>
+          <div class="dropdown-content">
+            <h3>Breaking Legacies: <img src="5stars.jpg" width="100px"></h3>
+            <h4>Zoe Reed</h4>
+            <p>This was one of the best books I had read in a while. It's a lesbian romance between an escaped princes and a warrior who was 
+              sent to find her. The plot was amazing. The romance was amazing. I loved everything about this book. I recently got a library 
+              card and this was one of the first books I checked out. I physically could not put it down.
+              <br><br>
+              With all the amazing aspects of any popular fantasy novel, this one is obviously much better because it's gay. You'll laugh, 
+              you'll cry. Please read this book for the good of humanity. I am trying my best to do my due diligence of spreading the gay 
+              agenda. It's been a while since I read this one and now that I'm writing this review, I want to go read it again.
+            </p>
+          </div>
+        </div>
 
         <div class="dropdown">
           <span><img src="Bookwolfsong.jpg" height="200px" alt="Wolfsong Cover"></span>
