--- a/bookreviewspage.html
+++ b/bookreviewspage.html
@@ -86,6 +86,112 @@ body {
           I am easily entertained so don't come for me for the amount of 5 star ratings you might see.)
         </p>
         <hr>
+
+        <div class="dropdown">
+          <span><img src="Bookserpentanddove.jpg" height="200px" alt="Serpent and Dove Cover"></span>
+          <div class="dropdown-content">
+            <h3>Serpent and Dove Series: <img src="3stars.jpg" width="100px"></h3>
+            <h4>Shelby Mahurin</h4>
+            <p>This one's a doozy. I read this series a couple years ago and here is the review I wrote at the time. Ranted, more like. 
+              I have decided that the world should see it. For the good of humanity. Please enjoy.
+            </p>
+            <br><br>*SPOILERS AHEAD*<br>
+            <p>ok sooooo Serpent and Dove. read the first book. it was good. great even. love Lou. Reid not so much. listen. the whole 
+              religious dominant aspect of the book almost turned me off even if it's something of an enemy. that gives you a clue how i 
+              feel about Reid. in the beginning, we all hated him, did we not? but then of course Lou and Reid started actually getting 
+              along and falling in love and whatever and life was fine. life was good. Reid was making a slight comeback. And then the 
+              conflict happens of course. he finds out she's a witch and says asshole stuff and she runs away blah blah blah. i will die for 
+              Lou. she does no wrong in my eyes. Reid on the other hand can suck my big fat dick. i already didn't think he'd made a full 
+              comeback before the climax. he still thought what he was doing was right and just and whatever. he still hated magic and 
+              witches. and then he briefly thinks what he said to Lou in the moment was wrong and realizes he still kinda loves her and 
+              decides to go save her. first of all, a bit late buddy. fuck you for that. fuck him for saying any of those things to begin 
+              with. and praise Ansel for telling him so. ok so he decides to go save her and kills the Archbishop for her and finds out he 
+              has magic and it all goes to shit but they survive of course. and then he apologizes a little bit. i'm still firmly on the 
+              side of fuck him at this point, mind you. the amount of groveling he needs to do to atone for just the things he said to her 
+              in the tower has not nearly been reached, especially not with his shoddy apology. he's all "it doesn't matter that you're a 
+              witch." fuck off. you don't love somebody in spite of something. you love all of them. Lou loved him since she fell for him. 
+              never stopped even until the end. forgave him on the drop of a dime. god bless her soul. i love her but she doesn't have the 
+              insight i do, clearly. so then the first book ends. Reid's in turmoil because he killed a wretched man and has 'evil' magic. 
+              hurray.
+              <br><br>
+              now i'm only halfway through the second book, so i'll update this review later obviously, but for now let's talk about the 
+              second book for a bit. once again, fuck Reid. i wasn't sure how i felt about him having magic in the first place because i 
+              always hate when authors take away the female empowerment part of books by giving men power. fuck men. they should have no 
+              power. but whatever. i can appreciate it for the plot. anyways we've established that Reid has not nearly groveled enough for 
+              hist first offence and i fear the time for that has come and gone. now he has other offences. his whole "i hate magic, magic 
+              is evil" thing he's got going on is getting old. listen i get that one month is not enough time to change a lifetime of beliefs, 
+              but still. grow up. Ansel can accept it. while Reid's over here crying because he has magic, Lou is doing all she can to 
+              comfort him. going out of her way to make sure they don't use magic with the disguises. going out of her way for HIM in general 
+              tbh. Reid's plagued by the thoughts of all his killing lately, oh but that never bothered him before. not when he was killing 
+              magical people. he still doesn't even feel bad about that i don't think. i don't see what Lou sees in him. she deserves better. 
+              and then Reid goes and says he won't stand being around magic at all. i'm glad there's a rift between them now. i hope she 
+              breaks his heart and he comes back and does some actual groveling. not the stupid little apologies he did before. so Reid the 
+              pussy can't be around magic. Lou even now tried to comfort him, but i'm glad she sent him away with Claud and his group. good 
+              riddance. what i don't like is that Reid still doesn't have his head out of his ass and Lou is still trying to comfort him when 
+              they meet back up. Reid is in the wrong here. has been in the wrong for a while. oh but when Lou uses her magic, loses control 
+              of her magic rather, she becomes the bad guy. she uses her magic to save his LIFE bro. it's always for him. everything she does 
+              is to save his life, and he doesn't even have the gall to say thank you. he just silently despises and judges her for her magic 
+              and for acting like her mother. how is Lou supposed to know what to do? how is she supposed to know how to deal with her 
+              emotions like love? it's not like she has a mother or father who loves her. she has a handful of friends that she literally 
+              didn't meet until these books besides Coco. and don't get me started on Lou accidentally losing Reid's balisarda or whatever. 
+              it was swallowed up by a tree dude. first of all, it's not in any way her fault. second of all, grow up. he had like a whole 
+              temper tantrum over his precious little sword knife thing. i get it. losing someone is hard. killing people is probably hard 
+              on the mind. killing someone you thought of as a father figure has got to be taxing. but the guy was shit. and he's killed 
+              before.
+              <br><br>
+              i have so so much i could write about this series. sorry this was so focused on Reid, but men suck. like i said, i love Lou and 
+              she can do no wrong. if i was her, i would have run away by now with all the hate she gets. i would be crying every night, 
+              lashing out at everyone. i literally do cry reading this book. i cry because of how they treat Lou sometimes. i'm such an 
+              empath really. but she's clearly stronger than me. i'm a sucker for strong, independent women who might turn a little evil 
+              for a time. i'll update this review when i'm finished or at least farther along in the series. i left off with the group just 
+              getting back to Ceserine after gathering allies or whatever. we'll see how this goes.
+              <br><br>
+              ***
+              <br>
+              update:
+              <br>
+              ok so i've just finished the second book. loved it. i don't take back what i said about Reid, but i suppose i like him now. 
+              ugh. what can i say? i'm a romantic. i still think there was some missing groveling, but i do like the way they both kind of 
+              healed before coming back together. and then everything went to shit again like usual. book ended in a climax so i'm of course 
+              going to start the next one in like two seconds. poor Ansel. sad but predictable. anyways here's what i hope for in the next 
+              book: 1) Reid finds out sooner rather than later that Lou is not Lou and has been possessed, immediately would be great; 2) i 
+              looked at the first chapter and it's from Nicholina's pov but we better get a good portion of real Lou in this book or i will 
+              rage. and by that i mean she better become unpossessed or whatever before the halfway point of the book; 3) Lou and Reid were 
+              in a good place before the climax of this book and i hope it stays that way for the entirety of this last book. and really that 
+              can only happen if Reid isn't a complete idiot and finds out Lou is really Nicholina right away; 4) lastly, it's got to be 
+              Lou that defeats her mother. she deserves the kill for christ's sake. i hate when authors take that away from the main female 
+              leads. it should be Lou who wins in the end and she should become queen and rule with goodness and morale and Reid with her 
+              and they'll unit the kingdom and live happily ever after. like i said, i'm a romantic.
+              <br><br>
+              ***
+              <br>
+              final update:
+              <br><br>
+              ahhhh i've finished! read the last book in all of 1 day. read for 12 hours. yay. now let's briefly talk about it. so my first 
+              wish came true. they found out Lou was posessed pretty early on. thank god. BUT i did NOT appreciate Reid losing his memory! 
+              that does not follow my third rule that Lou and Reid stay in a good place! i hate memory loss tropes, but again, i can 
+              appreciate it for the plot. ugh. whatever. so now Reid's back to asshole Reid. and right after he just got the love of his 
+              life back. way to go dude. if Lou wasn't as strong as she was, if her soul was more broken from Nicholina, you would have 
+              basically just killed her right then. jeez. but Lou loves him of course, so she fights for him and doesn't give up on him. 
+              how lovely. i did like how Celie and Jean Luc joined the fray. anyways i did also like how Lou won back Reid's heart, though 
+              i think if the author truly wanted that plot, they should've done it with more time for that to happen you know? i mean we were 
+              right back to where we started and Reid falls back in love with her after like 2 days? i feel like that maybe could've been a 
+              second book plot line. but i wouldn't have liked it there either. whatever. i'm a romantic so of course i liked how he fell 
+              back in love with her. that was very sweet. and the ending. a sufficient amount of suffering and dramatics. exactly what i 
+              like in my books. beautiful. and it was Lou who actually cut down her mother in the end. another one of my wishes fulfilled. 
+              i did like Celie though. and she helped of course. i forgot about Ansel! man. i was sad when he died but that epilogue? 
+              sobbing. i do wish the book was a little longer. wish there was more healing after the climax and whatnot. i also think 
+              Reid needs to do more groveling for willingly forgetting the love of his life. i mean come on. he could have destroyed her. 
+              i don't care if you were saving her life. you hurt my precious Lou you dingus. but i guess i do tend to be a bit harsh. oh 
+              well. now i'm in my post book depression so i need to start a new series. i started the Demon Days Vampire Nights series 
+              before Serpent and Dove. read the first three books. might go back to that now. or find another popular action romance novel 
+              with a badass female lead. those are my favorites after all. i know i said i don't follow the book bandwagon, but i'm gonna 
+              have to be a hypocrite for a while. there's some books i want to read i can't help it!
+            </p>
+          </div>
+        </div>
+
+
         <div class="dropdown">
           <span><img src="Bookcaptiveprince.jpg" height="200px" alt="Captive Prince Cover"></span>
           <div class="dropdown-content">
