--- a/bookreviewspage.html
+++ b/bookreviewspage.html
@@ -88,6 +88,28 @@ body {
         <hr>
 
         <div class="dropdown">
+          <span><img src="Bookacageofcrimson.jpg" height="200px" alt="A Cage of Crimson Cover"></span>
+          <div class="dropdown-content">
+            <h3>A Cage of Crimson: <img src="1star.jpg" width="100px"></h3>
+            <h4>K.F. Breene</h4>
+            <p>DNFed this book but let's talk about it anyway. K.F. Brenne. i had high hopes for you. i like some of her books. loved the Chosen series. this one though? 
+              not it. there's enemies to lovers and there's a man berating a women for half the book before suddenly figuring out he loves her. they are not 
+              the same and i am tired of books like that. i don't give a fuck if the guy is silently brooding inside and has really been in love the whole time. 
+              give me a fucking break. i like an alpha-male protective man trope every now and then if it's done right. this was decidedly not done right. 
+              instead of a hot guy i got a stupid fucking idiot who clearly hates women. i don't even know how to describe all that's wrong with this book without saying 
+              just go read it and experience it for yourself. this man intercepted a girl in the middle of the night, in the middle of her walk in the woods, and 
+              had sex with her. i don't give a fuck if it seemed like she wanted it or not. that's fucking creepy. that's fucking rape ok like i'm sorry but it is. 
+              and then you kill her only family, take her prisoner without even explaining why, berate her for no goddamn reason, and have sex with her again? 
+              that's not ok. that will never be ok and i'm tired of authors pretending that it is. it doesn't matter how much you write about the girl secretly wanting it. no 
+              means fucking no bitch. i'm actually appauled i made it so far into the book. as soon as the guy was all "run and i'll chase you down and have my way with you" 
+              that was it for me. i'd had enough almost rape at that point no way was i sticking around for more. this review probably made no sense 
+              but neither does this book. i'm actually about to crash out rn. i actually hated this book. do not read it if you have any respect 
+              for yourself. unless it's to understand all i'm talking about.
+            </p>
+          </div>
+        </div>
+
+        <div class="dropdown">
           <span><img src="Bookserpentanddove.jpg" height="200px" alt="Serpent and Dove Cover"></span>
           <div class="dropdown-content">
             <h3>Serpent and Dove Series: <img src="3stars.jpg" width="100px"></h3>
