--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@ body {
           <br><br>
             I have some contact information below if you want to stalk me or ask me out or anything *wink* *wink* (girls only). I love making 
           little vlogs of vacations on tik tok and youtube, so you should go check them out because I think they are fun. I also linked my 
-          ao3 which is bold, but whatever I CAN DO WHAT I WANT STOP COMING FOR ME. Also I don't have an Etsy yet BUT I plan on making one 
-          to sell cool stuff because why not.
+          ao3 which is bold, but whatever I CAN DO WHAT I WANT STOP COMING FOR ME. Also I have an etsy where I sell 3D printed stuff. Please 
+          buy from me if you see this. My only customers have been my family.
           <br><br>
             Anywaysssss. I don't really know what else to say. Maybe I'll add to this as time goes on. You know, like I evolve. I'm just a 
           little mentally ill, sexualy confused, sugar addicted little girl (not really, I am legal never fear) who wants to share her 
@@ -89,11 +89,11 @@ body {
             <br>
             Youtube: <a href="https://www.youtube.com/@sapperwrapper" target="_blank">@sapperwrapper</a>
             <br>
-            Instagram: <a href="https://www.instagram.com/taylorsapp._?igsh=ZHUxbHh2Znhpamxm&utm_source=qr" target="_blank">@taylorsapp._</a>
+            Instagram: <a href="https://www.instagram.com/taylorsapp._" target="_blank">@taylorsapp._</a>
             <br>
             Ao3: <a href="https://archiveofourown.org/users/mentallyfaraway" target="_blank">Mentallyfaraway</a>
             <br>
-            Etsy: <a href="#" class="right">SapperWrapper</a>     
+            Etsy: <a href="https://www.etsy.com/shop/sapperwrapper" target="_blank">SapperWrapper</a>     
         </p>
     
         <img src="Collage.png" alt="Collage of my favorite things." width="1250" height="500">
