--- a/randompage.html
+++ b/randompage.html
@@ -394,16 +394,16 @@ body {
       <hr>
         <h4>Additional Links</h4>
         <p style="font-size: 15px;">
-            Email: <a href="mailto:sapperwrapper@gmail.com">sapperwrapper@gmail.com</a>
-            <br>
-            Youtube: <a href="https://www.youtube.com/@sapperwrapper" target="_blank">@sapperwrapper</a>
-            <br>
-            Instagram: <a href="https://www.instagram.com/taylorsapp._?igsh=ZHUxbHh2Znhpamxm&utm_source=qr" target="_blank">@taylorsapp._</a>
-            <br>
-            Ao3: <a href="https://archiveofourown.org/users/mentallyfaraway" target="_blank">Mentallyfaraway</a>
-            <br>
-            Etsy: <a href="#" class="right">SapperWrapper</a>     
-        </p>
+          Email: <a href="mailto:sapperwrapper@gmail.com">sapperwrapper@gmail.com</a>
+          <br>
+          Youtube: <a href="https://www.youtube.com/@sapperwrapper" target="_blank">@sapperwrapper</a>
+          <br>
+          Instagram: <a href="https://www.instagram.com/taylorsapp._" target="_blank">@taylorsapp._</a>
+          <br>
+          Ao3: <a href="https://archiveofourown.org/users/mentallyfaraway" target="_blank">Mentallyfaraway</a>
+          <br>
+          Etsy: <a href="https://www.etsy.com/shop/sapperwrapper" target="_blank">SapperWrapper</a>     
+      </p>
     </div>
 </body>
 </html>
