--- a/randompage.html
+++ b/randompage.html
@@ -57,6 +57,31 @@ body {
       <div class="main">
         <h1 style="color: #cc10b0;">Random</h1>
         
+        <h3>UPDATE BITCHES (8/31/25)</h3>
+        <p>Hello there. Good day. How has everyone been? And by everyone, I of course mean no one! Soooooo
+          it's been another hot minute. Look. I really do want to keep this blog up to date. I want to be someone 
+          who blogs all the time and shit. Hopefully that can be me this year. Anyways. Here's my update!
+          <br><br>
+          So the fall semester has started. I'm in my 4th year of college now (ew). Not graduating though because 
+          I'm an engineering major (kill me (not really)). Also I'm doing a combined degree so I'll get my bachelors 
+          and masters at the same time in *hopefully* one more year. It's only been a week of the semester so far, but 
+          I think I'm going to like all my classes and professors. They all seem pretty nice and chill, but we'll see. 
+          I am writing this instead of doing my homework... not a great start to the semester lol.
+          <br><br>
+          So. Last spring sucked. Not sure I've ever in my life been more depressed. I'm a little better now, but 
+          the past couple of days have been kinda bad with school starting back up and everything. Hopefully I can 
+          power through. Maybe change my meds or something. This summer was really nice. I didn't take any classes and 
+          wasn't working, so I had a lot of time to focus on relaxing and training for my Ironman that I'm doing in 
+          2 months!!! I'm nervous and excited for that. It will be my first full distance Ironman race. I think I've 
+          done pretty well with training on my own. These last two months will be the hardest now with classes and 
+          work and such. 
+          <br><br>
+          I can't think of much else to write. I haven't been reading too many books the past few weeks, but once I 
+          get out of my funk, I'll start updating the book reviews page. I might update it with some books I've read 
+          since I last posted, though. If I can remember. Not too many books this year have stood out to me, but we'll 
+          see. Also I closed my etsy shop for now, but hope to be back and printing more shit soon. Welp. That's all I got. See you soon!
+        </p>
+        
         <h3>11/27/2024</h3>
         <p>Heyyy. Been a hot minute since I've looked at this blog. Mainly because I've been so busy doing absolutely nothing and rotting in bed. Very 
           depressing, as is my life. I'm home for Thanksgiving right now and growing increasingly bored (been home for not even one day). So I decided 
